# OpenFitnessPal

./: .gitignore  CMakeLists.txt  Constants.qml  Main.qml  OpenFitnessPal.qmlproject  OpenFitnessPal.qmlproject.qtds.4ddf43a  README.md  Sneed.qmlproject.qtds.350f9ae  accel  cp.sh  files.sh  icons.qrc  main.cpp  mv.sh  oldlist.txt  qds.cmake  qmldir  qtquickcontrols2.conf  real.sh  rename.sh  rm.sh  setup.sh  testview.qml
.github/workflows/: build.yml  trigger_builds.yml  trigger_release.yml
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
OFPContent/: AddButton.ui.qml  App.qml  CMakeLists.txt  DoubleSpinBox.qml
OFPContent/exercise/: ExerciseForm.ui.qml  ExerciseImpl.qml  ExercisePageForm.ui.qml  ExercisePageImpl.qml  ExerciseSetForm.ui.qml  ExerciseSetImpl.qml
OFPContent/food/: FoodPageForm.ui.qml  FoodPageImpl.qml  FoodSearchForm.ui.qml  FoodSearchImpl.qml  FoodServingEditForm.ui.qml  FoodServingEditImpl.qml  FoodServingInfoForm.ui.qml  FoodServingInfoImpl.qml  MealLogForm.ui.qml  MealLogImpl.qml
OFPContent/goals/: BaseGoal.ui.qml  GoalsPageForm.ui.qml
OFPContent/recipes/: RecipeAddForm.ui.qml  RecipeAddImpl.qml  RecipeEditForm.ui.qml  RecipeEditImpl.qml  RecipeInfoForm.ui.qml  RecipesPageForm.ui.qml  RecipesPageImpl.qml
OFPContent/settings/: SettingsPage.ui.qml
OFPData/: AddButton.ui.qml  App.qml  CMakeLists.txt  Constants.qml  DateSelect.qml  DirectoryFontLoader.qml  DoubleSpinBox.qml  qmldir
OFPData/exercise/: ExerciseForm.ui.qml  ExerciseImpl.qml  ExercisePageForm.ui.qml  ExercisePageImpl.qml  ExerciseRootPage.qml  ExerciseRootPageForm.ui.qml  ExerciseSetForm.ui.qml
OFPData/food/: FoodPage.qml  FoodPageForm.ui.qml  FoodSearchForm.ui.qml  FoodSearchImpl.qml  FoodServingEditForm.ui.qml  FoodServingEditImpl.qml  FoodServingInfoForm.ui.qml  JournalPage.qml  JournalPageForm.ui.qml  MealLogForm.ui.qml  MealLogImpl.qml
OFPData/goals/: GoalSpinBox.qml  GoalsPageForm.ui.qml  GoalsPageImpl.qml  IntGoalForm.ui.qml  IntGoalImpl.qml  MacroGoals.qml  MacroGoalsForm.ui.qml  PercentageBox.qml  SuffixedSpinBox.qml  WeightGoal.qml
OFPData/recipes/: RecipeAddForm.ui.qml  RecipeAddImpl.qml  RecipeEditForm.ui.qml  RecipeEditImpl.qml  RecipeInfoForm.ui.qml  RecipeInfoImpl.qml  RecipesPageForm.ui.qml  RecipesPageImpl.qml
OFPData/settings/: DirSetting.qml  DirSettingForm.ui.qml  MealNameSetting.qml  MealNameSettingForm.ui.qml  SettingsPage.qml  SettingsPage.ui.qml  SettingsPageForm.ui.qml  SettingsPageRootForm.ui.qml
android/: AndroidManifest.xml  build.gradle  gradlew  gradlew.bat
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
dialogs/: AnimatedDialog.qml
dialogs/date/: DatePicker.qml  MonthSpinBox.qml
include/: BackupManager.h  DateManager.h  ExerciseRoutine.h  FoodSearch.h  GoalManager.h  MainWindow.h  NutrientUnion.h  NutritionManager.h  PlatformHelper.h  Recipe.h  SearchItemWidget.h  Settings.h  Time.h
include/data/: CacheManager.h  CardioManager.h  DataManager.h  ExerciseManager.h  FoodManager.h  GoalManager.h  HealthMarkerManager.h  HealthMarkerProgressManager.h  MealNamesManager.h  NutritionManager.h  RecipeManager.h  RoutineManager.h  SearchSettingsManager.h  SettingsManager.h  SymptomLogManager.h  WeightManager.h
include/dialogs/: FoodSearch.h  FoodServingEdit.h  NutrientDialog.h  RecipeAdd.h  RecipeEdit.h
include/items/: Exercise.h  ExerciseSet.h  FoodInfoWidget.h  JournalItem.h  MacroPreview.h  MealLog.h  NutrientProgressBar.h  RecipeInfoWidget.h
include/models/: CardioModel.h  ExerciseListModel.h  ExerciseModel.h  ExerciseRoutineModel.h  ExerciseRoutinesModel.h  ExerciseSetsModel.h  FoodModel.h  FoodServingComboBoxModel.h  FoodServingModel.h  HealthMarkerModel.h  MealNamesModel.h  NutrientModel.h  RecipeListModel.h  RecipeModel.h  ServingSizeModel.h  SymptomLogModel.h
include/pages/: ExercisePage.h  GoalsPage.h  JournalPage.h  RecipesPage.h  SettingsPage.h
include/setup/: GoalsPage.h  IntroPage.h  SetupWizard.h
items/: DateSelector.qml  LabeledSpinBox.qml  NavButton.qml
lib/: CMakeLists.txt
lib/include/: Cardio.h  Exercise.h  ExerciseRoutine.h  ExerciseSet.h  FoodItem.h  HealthMarker.h  NutrientUnion.h  OFPManager.h  Recipe.h  ServingSize.h  SymptomLog.h
lib/src/: Cardio.cpp  Exercise.cpp  ExerciseRoutine.cpp  ExerciseSet.cpp  FoodItem.cpp  HealthMarker.cpp  NutrientUnion.cpp  OFPManager.cpp  Recipe.cpp  ServingSize.cpp  SymptomLog.cpp
pages/settings/: SettingsButton.qml  SettingsPage.qml
program_info/: CMakeLists.txt  OpenFitnessPal.desktop.in  OpenFitnessPal.icns  OpenFitnessPal.manifest.in  OpenFitnessPal.rc.in  genicons.sh  win_install.nsi.in
qml/: AddButton.ui.qml  App.qml  Constants.qml  DateSelect.qml  LabeledTextField.qml  Main.qml  RemoveButton.ui.qml
qml/designer/: plugin.metainfo
qml/dialogs/: AnimatedDialog.qml  OMessageDialog.qml
qml/exercise/: ExerciseRootPageForm.ui.qml
qml/food/: FoodPage.qml  FoodPageForm.ui.qml  FoodSearch.qml  FoodSearchForm.ui.qml  FoodServingEdit.qml  FoodServingEditForm.ui.qml  FoodServingInfoForm.ui.qml  JournalPage.qml  JournalPageForm.ui.qml  MealLog.qml  MealLogForm.ui.qml
qml/goals/: GoalsPage.qml  GoalsPageForm.ui.qml  IntGoal.qml  IntGoalForm.ui.qml  MacroGoals.qml  MacroGoalsForm.ui.qml  WeightGoal.qml
qml/items/: BaseTab.qml  BetterButton.qml  BigButton.qml  BigIcon.qml  BloodPressureField.qml  DateSelector.qml  FoodMacroGraph.qml  GoalComboBox.qml  HMSField.qml  LabeledCheckbox.qml  LabeledNumberField.qml  LabeledSpinBox.qml  LabeledTextField.qml  SectionHeader.qml  SmallNumberField.qml  TextButton.qml  TimeField.qml  TimeMSField.qml  UnlabeledTextField.qml
qml/recipes/: RecipeAdd.qml  RecipeAddForm.ui.qml  RecipeEdit.qml  RecipeEditForm.ui.qml  RecipeInfoForm.ui.qml  RecipesPage.qml  RecipesPageForm.ui.qml
screen/: MainScreen.qml
src/: BackupManager.cpp  DateManager.cpp  ExerciseRoutine.cpp  FoodSearch.cpp  GoalManager.cpp  MainWindow.cpp  NutrientUnion.cpp  NutritionManager.cpp  PlatformHelper.cpp  Recipe.cpp  SearchItemWidget.cpp  Settings.cpp  Time.cpp  main.cpp
ui/: FoodSearch.ui  MainWindow.ui  SearchItemWidget.ui
util/: NavButton.qml
(+218 files in other folders)
